tests/NormalTests/paczka1/fuzzy1/63293012.err
Error in line 1: G5jK9uLBw0Z A743 63,8
Error in line 3: G5jK9uLBw0Z A800 9,9
Error in line 31: WFx A608 47,8
Error in line 33: WFx A743 91,1
